updates
org.apache.logging.log4j to 2.20.0
jakarta-inject-api to 2.0.1.MR
versions-maven-plugin to 2.15.0
spring-boot to 3.0.3
spotbugs-maven-plugin to 4.7.3.2
removed unneeded entries from excludeFindbugs.xml
checkstyle to 10.8.0
pmd to 6.55
maven-compiler-plugin to 3.11.0
snakeyaml to 2.0
dependency-check plugin to 8.1.2
spring-framework to 6.0.6