@@ -18,7 +18,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.2</version>
+        <version>3.0.3</version>
     </parent>
 
     <properties>
@@ -30,38 +30,35 @@
         <byte-buddy.version>1.14.0</byte-buddy.version>
         <checkstyle.file.config>checkstyle.xml</checkstyle.file.config>
         <checkstyle.file.suppress>checkstyle-suppressions.xml</checkstyle.file.suppress>
-        <checkstyle.version>10.7.0</checkstyle.version>
+        <checkstyle.version>10.8.0</checkstyle.version>
         <classgraph.version>4.8.154</classgraph.version>
         <cssvalidator.version>1.0.8</cssvalidator.version>
-        <glassfish-jaxb.version>4.0.2</glassfish-jaxb.version>
-        <groovy.version>4.0.9</groovy.version>
         <gson.version>2.10.1</gson.version>
-        <hibernate.version>6.1.7.Final</hibernate.version>
-        <jackson-bom.version>2.14.2</jackson-bom.version>
         <jedis.version>4.4.0-m2</jedis.version>
         <jsonic.version>1.3.10</jsonic.version>
-        <lombok.version>1.18.26</lombok.version>
-        <micrometer.version>1.10.4</micrometer.version>
+        <log4j2.version>2.20.0</log4j2.version>
         <mockito.version>5.1.1</mockito.version>
         <plexus-compiler-api.version>2.13.0</plexus-compiler-api.version>
         <plexus-javac.version>2.13.0</plexus-javac.version>
-        <pmd.version>6.54.0</pmd.version>
-        <postgresql.version>42.5.4</postgresql.version>
-        <spring-data-bom.version>2022.0.2</spring-data-bom.version>
-        <spring-framework.version>6.0.5</spring-framework.version>
+        <pmd.version>6.55.0</pmd.version>
+        <snakeyaml.version>2.0</snakeyaml.version>
+        <spring-framework.version>6.0.6</spring-framework.version>
         <thymeleaf-layout-dialect.version>3.2.0</thymeleaf-layout-dialect.version>
+        <!-- for now, leave tomcat at 10.1.5 -->
+        <tomcat.version>10.1.5</tomcat.version>
 
         <!-- plugins -->
         <exec-maven-plugin.version>3.1.0</exec-maven-plugin.version>
         <lombok-maven-plugin.version>1.18.20.0</lombok-maven-plugin.version>
         <maven-checkstyle-plugin.version>3.2.1</maven-checkstyle-plugin.version>
+        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
         <maven-dependency-plugin.version>3.5.0</maven-dependency-plugin.version>
         <maven-deploy-plugin.version>3.1.0</maven-deploy-plugin.version>
         <maven-install-plugin.version>3.1.0</maven-install-plugin.version>
         <maven-javadoc-plugin.version>3.5.0</maven-javadoc-plugin.version>
         <maven-site-plugin.version>4.0.0-M5</maven-site-plugin.version>
         <maven-surefire-plugin.version>3.0.0-M9</maven-surefire-plugin.version>
-        <versions-maven-plugin.version>2.14.2</versions-maven-plugin.version>
+        <versions-maven-plugin.version>2.15.0</versions-maven-plugin.version>
     </properties>
 
     <dependencies>
@@ -78,7 +75,7 @@
         <dependency>
             <groupId>jakarta.inject</groupId>
             <artifactId>jakarta.inject-api</artifactId>
-            <version>2.0.1</version>
+            <version>2.0.1.MR</version>
         </dependency>
         <dependency>
             <groupId>jakarta.validation</groupId>
@@ -397,7 +394,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>3.0.2</version>
+                <version>3.0.3</version>
                 <configuration>
                     <addResources>true</addResources>
                     <!-- <jvmArguments>
@@ -600,9 +597,8 @@
             <plugin>
                 <groupId>com.github.spotbugs</groupId>
                 <artifactId>spotbugs-maven-plugin</artifactId>
-                <version>4.7.3.0</version>
+                <version>4.7.3.2</version>
                 <configuration>
-                    <jvmArgs>-Djava.security.manager=allow</jvmArgs>
                     <excludeFilterFile>excludeFindbugs.xml</excludeFilterFile>
                     <skip>${skip-checks}</skip>
                 </configuration>
@@ -724,7 +720,7 @@
             <plugin>
                 <groupId>org.owasp</groupId>
                 <artifactId>dependency-check-maven</artifactId>
-                <version>8.1.0</version>
+                <version>8.1.2</version>
                 <configuration>
                     <skip>${skip-checks}</skip>
                     <dataDirectory>${user.dir}/../dependency-check-data</dataDirectory>
